# http-beastie

./: CMakeLists.txt
include/: utils.hpp
src/: utils.cpp
static/: ezz.html
